src/test/deca/syntax/valid/created/testInitVar/initIntInFloat.deca
// Description :
//    Test de l'affectation d'une variable a à une variable b
//
// Résultats :
//    Ok

{
    int a = 1;
    int b;
    b = a;
    println(b);
}
