src/test/deca/syntax/invalid/created/testInst/InstIncomplete.deca
// Description :
//    Test invalide : Programme incorrect lexicalement (chaîne non terminée)
//
// Résultats :
//    Erreur syntaxique
//    Ligne 9: missing ')' at ';'

{
    println(;
}

